# project-levi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_Starter_Kit.md  design_spec.md  dev.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
00_context/: church-budget-tool-design.md  security_audit_phase1.md  xero_integration_guide.md
budgets/: 2026.sample.yaml
config/: chart_of_accounts.yaml  mission_giving.yaml  payroll.sample.yaml  properties.sample.yaml  roles.yaml
research/: xero_custom_connection_briefing.md
scripts/: __init__.py  migrate_historical.py  verify_migration.py  xero_auth.mjs
tests/: conftest.py  test_account_mapping.py  test_agm_report_service.py  test_auth_middleware.py  test_auth_routes.py  test_auth_service.py  test_balance_sheet.py  test_balance_sheet_changes.py  test_budget_comparison.py  test_budget_forecast.py  test_budget_routes.py  test_budget_service.py  test_budget_workflow.py  test_council_report_service.py  test_csrf.py  test_csv_import.py  test_dashboard_service.py  test_journal_aggregation.py  test_journal_sync.py  test_journals_api.py  test_m5_security.py  test_migrate_historical.py  test_payroll_redaction.py  test_payroll_scenarios.py  test_payroll_service.py  test_property_portfolio_service.py  test_property_scenarios.py  test_reconciliation.py  test_report_export.py  test_security_m3.py  test_security_m4.py  test_tracking_matrix_service.py  test_trend_explorer_service.py  test_verification.py  test_wave4_features.py  test_xero_accounts.py  test_xero_budget_summary.py  (+4 more)
(+119 files in other folders)
